# tt8051_c

./: CMakeLists.txt  README.md  emu  rebuild.sh
data/: aa.tt  test_0.tt
doc/: 设计思路.txt
src/lib/core/: tt_assert.h  tt_log.h  tt_tictoc.h
src/lib/stc/: file_preprocess.h
src/lib/test/: 0_file_process_test.cc  log_test.cc
